pkg/onprem/k8s/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: gocloud
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mongo
  template:
    metadata:
      labels:
        component: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: gocloud
spec:
  selector:
    component: mongo
  ports:
    - name: mongo
      protocol: TCP
      port: 27017
      targetPort: 27017

# kubectl apply -f pkg/onprem/k8s/mongo.yml
