pkg/onprem/k8s/rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: gocloud
spec:
  replicas: 1
  selector:
    matchLabels:
      component: rabbitmq
  template:
    metadata:
      labels:
        component: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 15672
            - containerPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: gocloud
spec:
  ports:
    - name: ui-port
      port: 15672
      targetPort: 15672
    - name: amqp
      port: 5672
      targetPort: 5672
  selector:
    component: rabbitmq

# kubectl apply -f pkg/onprem/k8s/rabbitmq.yml
