pkg/onprem/k8s/mailhog.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  namespace: gocloud
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mailhog
  template:
    metadata:
      labels:
        component: mailhog
    spec:
      containers:
        - name: mailhog
          image: mailhog/mailhog:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: smtp-server
              containerPort: 1025
            - name: web-ui
              containerPort: 8025
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  namespace: gocloud
spec:
  selector:
    component: mailhog
  ports:
    - name: smtp-server
      protocol: TCP
      port: 1025
      targetPort: 1025
    - name: web-ui
      protocol: TCP
      port: 8025
      targetPort: 8025
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog
  namespace: gocloud
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mailhog.delivery.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailhog
                port:
                  number: 8025

# kubectl apply -f pkg/onprem/k8s/mailhog.yml
