pkg/onprem/k8s/minio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: gocloud
spec:
  replicas: 1
  selector:
    matchLabels:
      component: minio
  template:
    metadata:
      labels:
        component: minio
    spec:
      containers:
        - name: minio
          image: quay.io/minio/minio:latest
          imagePullPolicy: IfNotPresent
          command: ["/bin/bash", "-c"]
          args: ["minio server /data --console-address :9090"]
          ports:
            - name: api
              containerPort: 9000
            - name: console
              containerPort: 9090
          volumeMounts:
            - name: minio-data
              mountPath: /data
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: gocloud
spec:
  selector:
    component: minio
  ports:
    - name: api-port
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: console-port
      protocol: TCP
      port: 9090
      targetPort: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: gocloud
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: minio.delivery.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9090

# kubectl apply -f pkg/onprem/k8s/minio.yml
